# Aerial-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  implementation_plan.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
aerial-core/: .gitignore  Cargo.toml  LICENSE  README.md
aerial-core/aerial-engine/: Cargo.toml
aerial-core/aerial-engine/src/: canvas.rs  lib.rs  scene.rs  tools.rs  utils.rs
aerial-core/aras-dsl/: Cargo.toml
aerial-core/aras-dsl/src/: ast.rs  error.rs  grammar.pest  lib.rs  parser.rs  printer.rs  transpiler.rs
aerial-core/aras-layout/: Cargo.toml
aerial-core/aras-layout/src/: graph.rs  lib.rs  sugiyama.rs  svg.rs
src/: AerialLogo.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aras.gbnf  diagram.rs  main.rs
