[package]
name = "aerial-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "High-performance WASM 2D canvas engine with CRDT state. The rendering core behind Aerial by Araskova Labs."
repository = "https://github.com/araskova-labs/aerial-engine"
homepage = "https://araskova.com/aerial"
keywords = ["canvas", "wasm", "webassembly", "crdt", "whiteboard"]
categories = ["wasm", "rendering", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
yrs = "0.17"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "MouseEvent",
  "Element",
  "EventTarget",
  "console",
  "Path2d",
  "DomRect",
  "DomPointReadOnly",
]

[profile.release]
opt-level = "s"   # optimize for small wasm binary size

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
